[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grad_cam"
version = "0.1.0"
description = "Giving the grad-cam map of the output of the convolutional networks made using pytorch;"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "torchvision>=0.13",
    "Pillow>=9.0"
]

[project.scripts]
my-command = "grad_cam.gradcam:grad_cam_from_pytorch_model"

[tool.hatch.build.targets.wheel]
packages = ["src/grad_cam"]